# cookiecutter-high-performance-pyms

./: AGENTS.md  cookiecutter.json  pyproject.toml
src/: main.py
src/core/: config.py  logging_config.py  metrics.py  tracing.py
src/service/: task_processor.py
src/tasks/: api.py  models.py  repository.py  service.py
tests/unit/: test_graceful_shutdown.py  test_main.py  test_task_processor.py  test_tasks.py
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/src/: main.py
{{cookiecutter.project_slug}}/src/core/: config.py
