[project]
name = "cookiecutter-high-performance-pyms"
version = "0.1.0"
description = "High performance Python microservice template"
authors = [{name = "Example", email = "example@example.com"}]
requires-python = ">=3.13"
dependencies = [
    "starlette==0.47.1",
    "uvicorn[standard]==0.35.0",
    "uvloop==0.21.0",
    "aioredis==2.0.1",
    "orjson==3.10.18",
    "msgspec==0.19.0",
    "quickle==0.4.0",
    "pydantic==2.11.7",
    "pydantic_settings==2.10.1",
    "loguru==0.7.3",
    "statsd==4.0.1",
    "opentelemetry-sdk==1.34.1",
    "python-json-logger==3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "coverage==7.9.2",
    "nox==2025.5.1",
    "ruff==0.12.2",
    "pyright==1.1.403",
    "pip-audit==2.9.0",
    "locust==2.37.12",
    "scalene==1.5.51",
    "commitizen==4.8.3",
]

[build-system]
requires = ["uv"]
build-backend = "uv.build"

